Added header, header image, and experience section

--- a/app/index.html
+++ b/app/index.html
@@ -28,30 +28,47 @@
 
 		<div id="container">
 			<section class="experiences">
-				<div class="experience">
-					<div class="container">
-						<img src="http://placekitten.com/g/300/200" width="300" height="200" alt="" />
+				<div class="container">
+					<div class="experience">
 						<div class="content">
-							<h2>Classical</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus. Nunc sed dolor id eros facilisis vulputate ut vel tortor. Duis ac nulla vulputate risus posuere dictum. Integer a posuere nibh, feugiat tempus diam.</p>
+							<div class="face front">
+								<h2>Classical</h2>
+							</div>
+							<div class="face back">
+								<h3>Dror received classical music training from</h3>
+								<div class="schools">
+									<span>Julliard</span> and <span>Mannes</span>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="experience">
-					<div class="container">
-						<img src="http://placekitten.com/g/300/200" width="300" height="200" alt="" />
+					<div class="experience">
 						<div class="content">
-							<h2>Concert</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus. Nunc sed dolor id eros facilisis vulputate ut vel tortor. Duis ac nulla vulputate risus posuere dictum. Integer a posuere nibh, feugiat tempus diam.</p>
+							<div class="face front">
+								<h2>Concert</h2>
+							</div>
+							<div class="face back">
+								<h3>Dror has concert experience in</h3>
+								<ul>
+									<li>Solo</li>
+									<li>Chamber</li>
+									<li>Orchestra</li>
+								</ul>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="experience">
-					<div class="container">
-						<img src="http://placekitten.com/g/300/200" width="300" height="200" alt="" />
+					<div class="experience">
 						<div class="content">
-							<h2>Broadway</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus. Nunc sed dolor id eros facilisis vulputate ut vel tortor. Duis ac nulla vulputate risus posuere dictum. Integer a posuere nibh, feugiat tempus diam.</p>
+							<div class="face front">
+								<h2>Broadway</h2>
+							</div>
+							<div class="face back">
+								<h3>Dror has experience on Broadway</h3>
+								<ul>
+									<li>Performing in the Disney production of <em>Mary Poppins</em></li>
+									<li>Performing for Broadway performers such as <em>Tovah Feldshuh</em> and cabaret artists</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
