Added new font, polished header and bio sections, added new background and color scheme

--- a/app/index.html
+++ b/app/index.html
@@ -27,84 +27,106 @@
 		</header>
 
 		<div id="container">
-			<section class="experiences">
+			<section id="about">
 				<div class="container">
-					<div class="experience">
-						<div class="content">
-							<div class="face front">
-								<h2>Classical</h2>
-							</div>
-							<div class="face back">
-								<h3>Dror received classical music training from</h3>
-								<div class="schools">
-									<span>Julliard</span> and <span>Mannes</span>
-								</div>
-							</div>
+					<div class="image">
+						<img src="/images/profile.jpg" width="300" height="387" alt="Dror Baitel" />
+					</div>
+					<div class="content">
+						<p>Lorem ipsum Dolore labore commodo laboris pariatur nisi Ut Duis occaecat adipisicing exercitation magna exercitation in dolore voluptate ut proident id cupidatat sint elit fugiat reprehenderit Ut occaecat nostrud esse fugiat id sunt sunt Duis ad.</p>
+						<p>Lorem ipsum Ex ut commodo culpa eiusmod eu veniam labore eiusmod Excepteur sunt laborum elit pariatur quis sunt ex fugiat sunt consequat laboris exercitation fugiat dolore.</p>
+						<p>Lorem ipsum Dolore labore commodo laboris pariatur nisi Ut Duis occaecat adipisicing exercitation magna exercitation in dolore voluptate ut proident id cupidatat sint elit fugiat reprehenderit Ut occaecat nostrud esse fugiat id sunt sunt Duis ad.</p>
+					</div>
+				</div>
+			</section>
+			<section id="experiences">
+				<div class="section-header">
+					<h2>He has experience in</h2>
+				</div>
+				<div class="experience">
+					<div class="content">
+						<div class="face front">
+							<h2>Classical</h2>
+						</div>
+						<div class="face back">
+							<h3>Dror received classical music training from</h3>
+							<em class="large"><span>Julliard</span> and <span>Mannes</span></em>
 						</div>
 					</div>
-					<div class="experience">
-						<div class="content">
-							<div class="face front">
-								<h2>Concert</h2>
-							</div>
-							<div class="face back">
-								<h3>Dror has concert experience in</h3>
-								<ul>
-									<li>Solo</li>
-									<li>Chamber</li>
-									<li>Orchestra</li>
-								</ul>
-							</div>
+				</div>
+				<div class="experience">
+					<div class="content">
+						<div class="face front">
+							<h2>Concert</h2>
+						</div>
+						<div class="face back">
+							<h3>Dror has concert experience in</h3>
+							<em class="large"><span>Solo, Chamber,</span> and <span>Orchestra</span></em>
 						</div>
 					</div>
-					<div class="experience">
-						<div class="content">
-							<div class="face front">
-								<h2>Broadway</h2>
-							</div>
-							<div class="face back">
-								<h3>Dror has experience on Broadway</h3>
-								<ul>
-									<li>Performing in the Disney production of <em>Mary Poppins</em></li>
-									<li>Performing for Broadway performers such as <em>Tovah Feldshuh</em> and cabaret artists</li>
-								</ul>
-							</div>
+				</div>
+				<div class="experience">
+					<div class="content">
+						<div class="face front">
+							<h2>Broadway</h2>
+						</div>
+						<div class="face back">
+							<h3>Dror has experience on Broadway</h3>
+							<ul>
+								<li>Performing in the Disney production of <em>Mary Poppins</em></li>
+								<li>Performing for Broadway performers such as <em>Tovah Feldshuh</em> and cabaret artists</li>
+							</ul>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="skills">
+			<section id="skills">
+				<div class="section-header">
+					<h2>And is available for hire as a</h2>
+				</div>
 				<div class="skill">
 					<div class="image image-director"></div>
-					<h3>Music Director</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					<div class="content">
+						<h3>Music Director</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					</div>
 				</div>
 				<div class="skill">
 					<div class="image image-pianist"></div>
-					<h3>Pianist</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					<div class="content">
+						<h3>Pianist</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					</div>
 				</div>
 				<div class="skill">
 					<div class="image image-conductor"></div>
-					<h3>Conductor</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					<div class="content">
+						<h3>Conductor</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					</div>
 				</div>
 				<div class="skill">
 					<div class="image image-coach"></div>
-					<h3>Vocal Coach</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					<div class="content">
+						<h3>Vocal Coach</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					</div>
 				</div>
 				<div class="skill">
 					<div class="image image-teacher"></div>
-					<h3>Piano Teacher</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					<div class="content">
+						<h3>Piano Teacher</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					</div>
 				</div>
 				<div class="skill">
 					<div class="image image-organist"></div>
-					<h3>Organist</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					<div class="content">
+						<h3>Organist</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper justo at neque varius, id egestas odio cursus.</p>
+					</div>
 				</div>
-			</div>
+			</section>
 		</div>
 
 		<footer>
