Added text shadowing and font aliasing

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 			</section>
 			<section id="experiences">
 				<div class="section-header">
-					<h2>He has experience in</h2>
+					<h2>Trained by the best</h2>
 				</div>
 				<div class="experience">
 					<div class="content">
@@ -82,7 +82,7 @@
 			</section>
 			<section id="skills">
 				<div class="section-header">
-					<h2>And is available for hire as a</h2>
+					<h2>And is available for hire</h2>
 				</div>
 				<div class="skill">
 					<div class="image image-director"></div>
