--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,9 @@
 					</div>
 				</div>
 			</section>
+			<section id="audio">
+				<i class="fa fa-play"></i>
+			</section>
 		</div>
 
 		<footer>
