--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="styles/main.css">
 		<!-- endbuild -->
 		<!-- build:js scripts/vendor/modernizr.js -->
-		<script src="bower_components/modernizr/modernizr.js"></script>
+		<script src="components/modernizr/modernizr.js"></script>
 		<!-- endbuild -->
 	</head>
 	<body>
@@ -38,7 +38,7 @@
 		<div id="container">
 			<section id="home">
 				<div class="image">
-					<img src="/images/profile.jpg" width="300" height="387" alt="Dror Baitel" />
+					<img src="/images/photos/dror-15-thumb.jpg" alt="Dror Baitel" />
 				</div>
 				<div class="content">
 					<p>Lorem ipsum Dolore labore commodo laboris pariatur nisi Ut Duis occaecat adipisicing exercitation magna exercitation in dolore voluptate ut proident id cupidatat sint elit fugiat reprehenderit Ut occaecat nostrud esse fugiat id sunt sunt Duis ad.</p>
@@ -52,7 +52,7 @@
 
 		<!-- build:js scripts/vendor.js -->
 		<!-- bower:js -->
-		<script src="bower_components/jquery/jquery.js"></script>
+		<script src="components/jquery/jquery.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -67,7 +67,7 @@
 		</script>
 
 		<!-- build:js scripts/main.js -->
-		<script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+		<script data-main="scripts/main" src="components/requirejs/require.js"></script>
 		<!-- endbuild -->
 </body>
 </html>
