--- a/app/media.html
+++ b/app/media.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="styles/main.css">
 		<!-- endbuild -->
 		<!-- build:js scripts/vendor/modernizr.js -->
-		<script src="bower_components/modernizr/modernizr.js"></script>
+		<script src="components/modernizr/modernizr.js"></script>
 		<!-- endbuild -->
 	</head>
 	<body>
@@ -50,15 +50,74 @@
 			</section>
 			<section id="photo">
 				<h2>Photos</h2>
+				<ul id="grid" class="grid effect-2">
+					<li class="photo">
+						<a href="/images/photos/dror-11.jpg">
+							<img src="/images/photos/dror-11-thumb.jpg" />
+						</a>
+					</li>
+					<li class="photo">
+						<a href="/images/photos/dror-12.jpg">
+							<img src="/images/photos/dror-12-thumb.jpg" />
+						</a>
+					</li>
+					<li class="photo">
+						<a href="/images/photos/dror-13.jpg">
+							<img src="/images/photos/dror-13-thumb.jpg" />
+						</a>
+					</li>
+					<li class="photo">
+						<a href="/images/photos/dror-14.jpg">
+							<img src="/images/photos/dror-14-thumb.jpg" />
+						</a>
+					</li>
+					<li class="photo">
+						<a href="/images/photos/dror-15.jpg">
+							<img src="/images/photos/dror-15-thumb.jpg" />
+						</a>
+					</li>
+					<li class="photo">
+						<a href="/images/photos/dror-17.jpg">
+							<img src="/images/photos/dror-17-thumb.jpg" />
+						</a>
+					</li>
+					<li class="photo">
+						<a href="/images/photos/dror-18.jpg">
+							<img src="/images/photos/dror-18-thumb.jpg" />
+						</a>
+					</li>
+					<li class="photo">
+						<a href="/images/photos/dror-19.jpg">
+							<img src="/images/photos/dror-19-thumb.jpg" />
+						</a>
+					</li>
+					<li class="photo">
+						<a href="/images/photos/dror-20.jpg">
+							<img src="/images/photos/dror-20-thumb.jpg" />
+						</a>
+					</li>
+				</ul>
 			</section>
 			</section>
 		</div>
 
 		<!-- build:js scripts/vendor.js -->
 		<!-- bower:js -->
-		<script src="bower_components/jquery/jquery.js"></script>
+		<script src="components/jquery/jquery.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
+
+		<script src="scripts/vendor/masonry.pkgd.js"></script>
+		<script src="scripts/vendor/imagesloaded.js"></script>
+		<script src="scripts/vendor/classie.js"></script>
+		<script src="scripts/vendor/AnimOnScroll.js"></script>
+		<script>
+			new AnimOnScroll( document.getElementById( 'grid' ), {
+				minDuration : 0.4,
+				maxDuration : 0.7,
+				viewportFactor : 0.2
+			} );
+		</script>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
@@ -71,7 +130,7 @@
 		</script>
 
 		<!-- build:js scripts/main.js -->
-		<script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+		<script data-main="scripts/main" src="components/requirejs/require.js"></script>
 		<!-- endbuild -->
 </body>
 </html>
