--- a/app/media.html
+++ b/app/media.html
@@ -28,7 +28,7 @@
 
 		<nav id="nav">
 			<ul>
-				<li class="home"><a href="/">Home</a></li>
+				<li class="home"><a href="/">Bio</a></li>
 				<li class="media active"><a href="/media.html">Media</a></li>
 				<li class="schedule"><a href="/schedule.html">Schedule</a></li>
 				<li class="contact"><a href="/contact.html">Contact</a></li>
@@ -97,7 +97,6 @@
 						</a>
 					</li>
 				</ul>
-			</section>
 			</section>
 		</div>
 
