--- a/app/schedule.html
+++ b/app/schedule.html
@@ -28,25 +28,16 @@
 
 		<nav id="nav">
 			<ul>
-				<li class="home active"><a href="/">Bio</a></li>
+				<li class="home"><a href="/">Bio</a></li>
 				<li class="media"><a href="/media.html">Media</a></li>
-				<li class="schedule"><a href="/schedule.html">Schedule</a></li>
+				<li class="schedule active"><a href="/schedule.html">Schedule</a></li>
 				<li class="contact"><a href="/contact.html">Contact</a></li>
 			</ul>
 		</nav>
 
 		<div id="container">
-			<section id="home">
-				<div class="image">
-					<img src="/images/photos/dror-15-thumb.jpg" alt="Dror Baitel" />
-				</div>
-				<div class="content">
-					<p>Lorem ipsum Dolore labore commodo laboris pariatur nisi Ut Duis occaecat adipisicing exercitation magna exercitation in dolore voluptate ut proident id cupidatat sint elit fugiat reprehenderit Ut occaecat nostrud esse fugiat id sunt sunt Duis ad.</p>
-					<p>Lorem ipsum Ex ut commodo culpa eiusmod eu veniam labore eiusmod Excepteur sunt laborum elit pariatur quis sunt ex fugiat sunt consequat laboris exercitation fugiat dolore.</p>
-					<p>Dror received classical music trining from <em>Julliard</em> and <em>Mannes</em>.</p>
-					<p>Dror has Solo, Chamber, and Orchestra concert experience.</p>
-					<p>Dror has experience on Broadway performing in the Disney production of <em>Mary Poppins</em>, and for Broadway performers such as <em>Tovah Feldshuh</em> and cabaret artists.</p>
-				</div>
+			<section id="schedule">
+				<h2>Schedule</h2>
 			</section>
 		</div>
 
