Made the site responsive

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 		</nav>
 
 		<div id="container">
-			<section id="home">
+			<section id="bio">
 				<div class="image">
 					<img src="/images/photos/dror-15-thumb.jpg" alt="Dror Baitel" />
 				</div>
