--- a/app/contact.html
+++ b/app/contact.html
@@ -42,6 +42,12 @@
 			</section>
 		</div>
 
+		<footer>
+			<div class="container">
+				<div class="copyright">All Content &copy; 2013 Dror Baitel. All Rights Reserved.</div>
+			</div>
+		</footer>
+
 		<!-- build:js scripts/vendor.js -->
 		<!-- bower:js -->
 		<script src="components/jquery/jquery.js"></script>
