--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,12 @@
 			</section>
 		</div>
 
+		<footer>
+			<div class="container">
+				<div class="copyright">All Content &copy; 2013 Dror Baitel. All Rights Reserved.</div>
+			</div>
+		</footer>
+
 		<!-- build:js scripts/vendor.js -->
 		<!-- bower:js -->
 		<script src="components/jquery/jquery.js"></script>
