--- a/app/index.html
+++ b/app/index.html
@@ -38,16 +38,12 @@
 		<section id="reviews">
 			<div class="container">
 				<div class="review">
-					<quote class="quote">Lorem ipsum Sunt Duis velit nostrud Duis officia sunt dolore Ut ut dolor est deserunt enim ut fugiat anim incididunt reprehenderit ut ullamco cupidatat ad consequat ad Excepteur amet.</quote>
-					<div class="author">Abraham Lincoln</div>
+					<blockquote class="quote">He's able to play in a wide variety of styles with a keen sense of musicality that I'm extremely impressed by.</blockquote>
+					<cite class="author"><a href="http://www.broadwayworld.com/people/Alex-Lacamoire/">Alex Lacamoire</a></cite>
 				</div>
 				<div class="review">
-					<quote class="quote">Lorem ipsum Sunt Duis velit nostrud Duis officia sunt dolore Ut ut dolor est deserunt enim ut fugiat anim incididunt reprehenderit ut ullamco cupidatat ad consequat ad Excepteur amet.</quote>
-					<div class="author">Abraham Lincoln</div>
-				</div>
-				<div class="review">
-					<quote class="quote">Lorem ipsum Sunt Duis velit nostrud Duis officia sunt dolore Ut ut dolor est deserunt enim ut fugiat anim incididunt reprehenderit ut ullamco cupidatat ad consequat ad Excepteur amet.</quote>
-					<div class="author">Abraham Lincoln</div>
+					<blockquote class="quote">His talent is exceptional and distinguished, and accordingly, his performances repeatedly receive rave reviews.</blockquote>
+					<cite class="author"><a href="http://www.tovahfeldshuh.com/">Tovah Feldshuh</a></cite>
 				</div>
 			</div>
 		</section>
