Fixed styling for reviews, schedule, and bio; made schedule dynamic

--- a/app/media.html
+++ b/app/media.html
@@ -40,7 +40,7 @@
 				<h2>Audio</h2>
 			</section> -->
 			<section id="video">
-				<h2>Video</h2>
+				<h2 class="section-header">Video</h2>
 				<div class="video">
 					<iframe src="//www.youtube.com/embed/wEyixCeexUE?rel=0" frameborder="0" allowfullscreen></iframe>
 				</div>
@@ -49,7 +49,7 @@
 				</div>
 			</section>
 			<section id="photo">
-				<h2>Photos</h2>
+				<h2 class="section-header">Photos</h2>
 				<ul id="grid" class="grid effect-2">
 					<li class="photo">
 						<a href="/images/photos/dror-11.jpg">
