--- a/app/index.html
+++ b/app/index.html
@@ -53,11 +53,12 @@
 				<img src="/images/photos/dror-15-thumb.jpg" alt="Dror Baitel" />
 			</div>
 			<div class="content">
-				<p>Lorem ipsum Dolore labore commodo laboris pariatur nisi Ut Duis occaecat adipisicing exercitation magna exercitation in dolore voluptate ut proident id cupidatat sint elit fugiat reprehenderit Ut occaecat nostrud esse fugiat id sunt sunt Duis ad.</p>
-				<p>Lorem ipsum Ex ut commodo culpa eiusmod eu veniam labore eiusmod Excepteur sunt laborum elit pariatur quis sunt ex fugiat sunt consequat laboris exercitation fugiat dolore.</p>
-				<p>Dror received classical music trining from <em>Julliard</em> and <em>Mannes</em>.</p>
-				<p>Dror has Solo, Chamber, and Orchestra concert experience.</p>
-				<p>Dror has experience on Broadway performing in the Disney production of <em>Mary Poppins</em>, and for Broadway performers such as <em>Tovah Feldshuh</em> and cabaret artists.</p>
+				<h3>Dror Baitel has established his musical career as well diverse and versatile.</h3>
+				<p>He was classically trained in piano at Juilliard and Mannes College. His concert career led to appearances at Carnegie Hall and Lincoln Center's Alice Tully Hall, among others.</p>
+				<p>In addition to his Classical experience, Mr. Baitel has performed on Broadway at the famous Disney Musical <em>Mary Poppins</em>.</p>
+				<p>His passion for collaborating with singers led to his work with famous artists ranging from singers from the Metropolitan Opera to Broadway star and four time Tony nominee Tovah Feldshuh. He collaborated with cabaret artists at famous venues such as Town Hall, 54 Below, Don't Tell Mama, and The Duplex.</p>
+				<p>His dedication to Music Education for children resulted in working for many schools in New York City and most recently at Stagedoor Manor Camp.</p>
+				<p>His work as a Musical Director and Conductor at The Secret Theatre, bore fruits to The Wild Party, and most recently to Oliver!</p>
 			</div>
 		</section>
 
