Fixed section spacing

--- a/app/media.html
+++ b/app/media.html
@@ -35,20 +35,15 @@
 			</ul>
 		</nav>
 
-		<div class="container">
-			<!-- <section id="audio">
-				<h2>Audio</h2>
-			</section> -->
-			<section id="video">
-				<h2 class="section-header">Video</h2>
-				<div class="video">
+		<section id="media">
+			<div class="container">
+				<h2 class="section-header">Videos</h2>
+				<div class="media-video">
 					<iframe src="//www.youtube.com/embed/wEyixCeexUE?rel=0" frameborder="0" allowfullscreen></iframe>
 				</div>
-				<div class="video">
+				<div class="media-video">
 					<iframe src="//www.youtube.com/embed/-Bq9dKVCKAU?rel=0" frameborder="0" allowfullscreen></iframe>
 				</div>
-			</section>
-			<section id="photo">
 				<h2 class="section-header">Photos</h2>
 				<ul id="grid" class="grid effect-2">
 					<li class="photo">
@@ -97,8 +92,8 @@
 						</a>
 					</li>
 				</ul>
-			</section>
-		</div>
+			</div>
+		</section>
 
 		<footer>
 			<div class="copyright">All Content &copy; 2013 Dror Baitel. All Rights Reserved.</div>
