--- a/app/index.html
+++ b/app/index.html
@@ -38,12 +38,12 @@
 		<section id="reviews">
 			<div class="container">
 				<div class="review">
-					<blockquote class="quote">He's able to play in a wide variety of styles with a keen sense of musicality that I'm extremely impressed by.</blockquote>
-					<cite class="author"><a href="http://www.broadwayworld.com/people/Alex-Lacamoire/">Alex Lacamoire</a></cite>
+					<blockquote class="quote">[Dror is] able to play in a wide variety of styles with a keen sense of musicality that I'm extremely impressed by.</blockquote>
+					<cite class="author"><a href="http://www.broadwayworld.com/people/Alex-Lacamoire/">Alex Lacamoire</a> - Tony and Grammy Winner</cite>
 				</div>
 				<div class="review">
-					<blockquote class="quote">His talent is exceptional and distinguished, and accordingly, his performances repeatedly receive rave reviews.</blockquote>
-					<cite class="author"><a href="http://www.tovahfeldshuh.com/">Tovah Feldshuh</a></cite>
+					<blockquote class="quote">[Dror's] talent is exceptional and distinguished, and accordingly, his performances repeatedly receive rave reviews.</blockquote>
+					<cite class="author"><a href="http://www.tovahfeldshuh.com/">Tovah Feldshuh</a> - Four time Tony Award Nominee</cite>
 				</div>
 			</div>
 		</section>
