--- a/app/schedule.html
+++ b/app/schedule.html
@@ -35,11 +35,11 @@
 			</ul>
 		</nav>
 
-		<div class="container">
-			<section id="schedule">
-				<h2>Schedule</h2>
-			</section>
-		</div>
+		<section id="schedule">
+			<div class="container">
+				<h2 class="section-header">Schedule</h2>
+			</div>
+		</section>
 
 		<footer>
 			<div class="copyright">All Content &copy; 2013 Dror Baitel. All Rights Reserved.</div>
