--- a/app/index.html
+++ b/app/index.html
@@ -53,12 +53,12 @@
 				<img src="/images/photos/dror-15-thumb.jpg" alt="Dror Baitel" />
 			</div>
 			<div class="content">
-				<h3>Dror Baitel has established his musical career as well diverse and versatile.</h3>
-				<p>He was classically trained in piano at Juilliard and Mannes College. His concert career led to appearances at Carnegie Hall and Lincoln Center's Alice Tully Hall, among others.</p>
-				<p>In addition to his Classical experience, Mr. Baitel has performed on Broadway at the famous Disney Musical <em>Mary Poppins</em>.</p>
-				<p>His passion for collaborating with singers led to his work with famous artists ranging from singers from the Metropolitan Opera to Broadway star and four time Tony nominee Tovah Feldshuh. He collaborated with cabaret artists at famous venues such as Town Hall, 54 Below, Don't Tell Mama, and The Duplex.</p>
-				<p>His dedication to Music Education for children resulted in working for many schools in New York City and most recently at Stagedoor Manor Camp.</p>
-				<p>His work as a Musical Director and Conductor at The Secret Theatre, bore fruits to The Wild Party, and most recently to Oliver!</p>
+				<h3>Dror Baitel has established himself in the world of music as a leading talent through his virtuosity and versatility across diverse genres.</h3>
+				<p>Classically trained in piano at Juilliard and Mannes College, his career includes performances at Carnegie Hall and Lincoln Center's Alice Tully Hall.</p>
+				<p>Beyond the classical repertoire, Mr. Baitel also performed on Broadway where he was part of Disney's critically acclaimed 'Mary Poppins.'</p>
+				<p>Throughout his career, he showed a passion for the collaboration with other musicians, with much success. Mr. Baitel performed with celebrated artists ranging from singers at the Metropolitan Opera to Broadway star and four-time Tony Award nominee Tovah Feldshuh. Moreover, he collaborated with cabaret artists at New York's most legendary venues Town Hall, 54 Below, Don't Tell Mama, and The Duplex.</p>
+				<p>Mr. Baitel is also dedicated to music education and worked at many New York schools and institutions, most recently at Stagedoor Manor Camp.</p>
+				<p>In his capacity as a Musical Director and Conductor at The Secret Theatre, he helped make 'The Wild Party,' and most recently to 'Oliver!' a success.</p>
 			</div>
 		</section>
 
