Updated contact email address

--- a/app/contact.html
+++ b/app/contact.html
@@ -38,7 +38,7 @@
 		<div class="container">
 			<section id="contact">
 				<h3>Contact me for further inquiry</h3>
-				<a class="btn" href="mailto:drorbaitel@yahoo.com">drorbaitel@yahoo.com</a>
+				<a class="btn" href="mailto:info@drorbaitel.com">info@drorbaitel.com</a>
 			</section>
 		</div>
 
