Changed styling on bio

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
 				<img src="/images/photos/dror-15-thumb.jpg" alt="Dror Baitel" />
 			</div>
 			<div class="content">
-				<h3>Dror Baitel has established himself in the world of music as a leading talent through his virtuosity and versatility across diverse genres.</h3>
+				<p>Dror Baitel has established himself in the world of music as a leading talent through his virtuosity and versatility across diverse genres.</p>
 				<p>Classically trained in piano at Juilliard and Mannes College, his career includes performances at Carnegie Hall and Lincoln Center's Alice Tully Hall.</p>
 				<p>Beyond the classical repertoire, Mr. Baitel also performed on Broadway where he was part of Disney's critically acclaimed 'Mary Poppins.'</p>
 				<p>Throughout his career, he showed a passion for the collaboration with other musicians, with much success. Mr. Baitel performed with celebrated artists ranging from singers at the Metropolitan Opera to Broadway star and four-time Tony Award nominee Tovah Feldshuh. Moreover, he collaborated with cabaret artists at New York's most legendary venues Town Hall, 54 Below, Don't Tell Mama, and The Duplex.</p>
